# CrewAi

./: README.md
my_crew/: README.md  hotels_result.md  math_task.md  pyproject.toml  python_code.md  report.md  search_flights_task.md  tour_itinerary.md  travel_advice.md
my_crew/src/my_crew/: crew.py  main.py
my_crew/src/my_crew/config/: agents.yaml  tasks.yaml
my_crew/src/my_crew/tools/: flight_tool.py
teacher_crew/: README.md  lesson_plan.md  pyproject.toml  quiz.md  report.md
teacher_crew/src/teacher_crew/: crew.py  main.py
teacher_crew/src/teacher_crew/config/: agents.yaml  tasks.yaml
