[project]
name = "teacher_crew"
version = "0.1.0"
description = "teacher_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.3"
]

[project.scripts]
teacher_crew = "teacher_crew.main:run"
run_crew = "teacher_crew.main:run"
train = "teacher_crew.main:train"
replay = "teacher_crew.main:replay"
test = "teacher_crew.main:test"
run_with_trigger = "teacher_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
